# xtensa-blinky

./: .gitignore  Makefile  README.md  example_test.py  setenv
components/rust/: CMakeLists.txt
components/rust/src/: lib.rs
main/: CMakeLists.txt  Kconfig.projbuild  blinky.c
